# uhd

./: .gitlab-ci.yml  CHANGELOG  Jenkinsfile  README.md
.buildkite/: pipeline.yml  run.sh
.buildkite/scripts/: REAMDE.md  etc_buildkite_hooks_environment  fix-buildkite-agent-ccache-permissions  sudoers.conf
host/: CMakeLists.txt
host/cmake/: cmd
host/cmake/Modules/: CMakeRC.cmake  FindDPDK.cmake  UHDBoost.cmake  UHDComponent.cmake  UHDConfig.cmake.in  UHDConfigVersion.cmake.in  UHDMinDepVersions.cmake  UHDPython.cmake  UHDVersion.cmake  copy_rfnoc_newmod.py
host/cmake/debian/: changelog  control  rules  uhd-host.install  uhdpv-host.install
host/cmake/debian-pv/: changelog  control  rules  uhdpv-doc.doc-base  uhdpv-host.install  uhdpv-host.postinst  uhdpv-host.sysctl
host/cmake/debianpv/: README.Debian  changelog  control  postinst.in  prerm.in  rules  uhdpv-doc.install  uhdpv-host.sysctl
host/cmake/pkg-pv/: PKGBUILD  libuhdpv.install
host/cmake/rpm-pv/: libuhdpv.spec  uhdpv.spec
host/cmake/ubuntu-focal/: README.Debian  changelog  control  libuhdpv-dev.install  preinst.in  rules  uhdpv-doc.install  uhdpv-host.sysctl
host/cmake/ubuntu-jammy/: compat  control  copyright  patches  postinst.in  prerm.in  python3-uhdpv.install  rules  source  uhdpv-host.install  uhdpv-host.postinst  watch
host/cmake/ubuntu-noble/: NetworkManager-USRP  control  libuhdpv.install  postrm.in  uhdpv-doc.doc-base  uhdpv-host.dirs  uhdpv-host.limits
host/docs/: 08_appnotes.dox  Doxyfile.in  c_api.dox  mainpage.dox  uhd.dox
host/docs/app_notes/: rfnoc_custom_clocks.md
host/examples/: CMakeLists.txt  benchmark_rate.cpp  command_time.cpp  flow_control_example.cpp  gpio.cpp  latency_test.cpp  nco_check.cpp  network_relay.cpp  rfnoc_nullsource_ce_rx.cpp  rfnoc_radio_loopback.cpp  rfnoc_replay_samples_from_file.cpp  rfnoc_rx_to_file.cpp  rx_ascii_art_dft.cpp  rx_multi_rates_to_file.cpp  rx_multi_samples.cpp  rx_samples_c.c  rx_samples_to_file.cpp  rx_samples_to_file_debug.cpp  rx_samples_to_file_legacy.cpp  rx_samples_to_udp.cpp  rx_start.cpp  rx_start_synchronized.cpp  rx_stop.cpp  rx_stream_init.cpp  rx_timed_samples.cpp  rx_timed_samples_crimson.cpp  rx_to_tx_loopback.cpp  rx_trigger_iterative_test_tool.cpp  rxtx_inline_filter_crimson.cpp  rxtx_inter_device_stream.cpp  set_clk_reference.cpp  set_get_path_value.cpp  sync_to_gps.cpp  test_clock_synch.cpp  test_dboard_coercion.cpp  test_messages.cpp  test_set_get_path_value.cpp  test_stacked_gpio_commands.cpp  test_stacked_gpio_commands_tate.cpp  test_timed_commands.cpp  (+24 more)
host/examples/extension_example/: CMakeLists.txt
host/examples/init_usrp/: CMakeLists.txt
host/examples/python/: CMakeLists.txt  uhd_multicrimson_alignment.py
host/examples/rfnoc-gain/: CMakeLists.txt
host/include/uhd/: config.h  config.hpp  convert.hpp  device.hpp  image_loader.hpp  property_tree.hpp  property_tree.ipp  stream.hpp
host/lib/: CMakeLists.txt  build_info.cpp  device.cpp  exception.cpp  global.hpp  image_loader.cpp  property_tree.cpp  stream_python.hpp  version.cpp
host/lib/convert/: CMakeLists.txt  convert_impl.cpp  convert_sc16_item32.cpp  convert_uc16_item32.cpp  convert_with_tables.cpp  sse2_fc32_to_sc16.cpp  sse2_sc16_to_fc32.cpp
host/lib/experts/: expert_container.cpp
host/lib/rfnoc/: block_container.cpp  block_id.cpp  chdr_ctrl_endpoint.cpp  chdr_types.cpp  ctrlport_endpoint.cpp  ddc_block_control.cpp  dma_fifo_block_ctrl_impl.cpp  dmafifo_block_control.cpp  duc_block_control.cpp  fft_block_control.cpp  graph.cpp  graph_stream_manager.cpp  link_stream_manager.cpp  mb_controller.cpp  mgmt_portal.cpp  node.cpp  radio_control_impl.cpp  rfnoc_graph.cpp  topo_graph.cpp
host/lib/transport/: CMakeLists.txt  async_recv_manager.cpp  buffer_pool.cpp  buffer_tracker.cpp  chdr.cpp  clock_sync_manager.cpp  dpdk_simple.cpp  flow_control.hpp  flow_control_nonlinear.hpp  flow_control_sync.hpp  gen_vrt_if_packet.py  io_uring_recv_manager.cpp  libusb1_base.cpp  libusb1_base.hpp  libusb1_zero_copy.cpp  muxed_zero_copy_if.cpp  nirio_link.cpp  nirio_zero_copy.cpp  super_recv_packet_handler.hpp  super_recv_packet_handler_mmsg.cpp  super_recv_packet_handler_mmsg.hpp  super_send_packet_handler.hpp  super_send_packet_handler_crimson.hpp  super_send_packet_handler_mmsg.cpp  super_send_packet_handler_mmsg.hpp  tcp_simple.cpp  tcp_zero_copy.cpp  udp_boost_asio_link.cpp  udp_dpdk_link.cpp  udp_simple.cpp  udp_stream.cpp  udp_stream_zero_copy.cpp  udp_wsa_zero_copy.cpp  udp_zero_copy.cpp  user_recv_manager.cpp  xport_benchmarker.hpp  zero_copy_flow_ctrl.cpp
host/lib/types/: CMakeLists.txt  (+12 more)
host/python/: CMakeLists.txt  pyproject.toml.in  setup.py.in  uhd_build.py
host/tests/: CMakeLists.txt  adf535x_test.cpp  blockdef_test.cpp  choose_dsp_nco_shift_test.cpp  conv_test.cpp  crimson_tng_test.cpp  cyan_16t_test.cpp  cyan_64t_test.cpp  cyan_8t.cpp  cyan_8t_test.cpp  cyan_p1hdr32t.cpp  cyan_p1hdr32t_test.cpp  error_c_test.cpp  expert_test.cpp  flow_control_test.cpp  gain_group_test.cpp  iputils_test.cpp  paths_test.cpp  property_test.cpp  rfnoc_chdr_test.cpp  set_rx_gain_test.cpp  sma_test.cpp  sph_recv_test.cpp  sph_send_test.cpp  streamer_benchmark.cpp  tune_lo_and_dsp_fixture.hpp  tune_lo_and_dsp_test.cpp  tune_lo_and_dsp_test_fixture.hpp  vrt_test.cpp  xlate_test.cpp
host/tests/common/: mock_zero_copy.hpp
host/tests/rfnoc_block_tests/: fft_block_test.cpp  fft_block_test_v2.cpp
host/utils/: CMakeLists.txt  b2xx_fx3_utils.cpp  converter_benchmark.cpp  crimson_diagnostic.sh  fx2_init_eeprom.cpp  octoclock_burn_eeprom.cpp  pv_self_calibration.cpp  query_gpsdo_sensors.cpp  set_delays.cpp  uhd_cal_rx_iq_balance.cpp  uhd_cal_tx_dc_offset.cpp  uhd_cal_tx_iq_balance.cpp  uhd_config_info.cpp  uhd_find_devices.cpp  uhd_image_loader.cpp  uhd_manual_get.cpp  uhd_manual_set.cpp  uhd_multicrimson_alignment.py  uhd_usrp_info.cpp  uhd_usrp_probe.cpp  usrp_burn_db_eeprom.cpp  usrp_burn_mb_eeprom.cpp
images/: manifest.txt
mpm/python/: copy_python_module.cmake  n3xx_bist
my_PKG/: PKGBUILD
tools/debs/: uhd_pv_ubuntu_deb.py  uhdpv_ubuntu_deb.py  update_patch_number.sh
(+423 files in other folders)
